--- a/lectures/lecture16/Lecture16_DifferentialGeneExpression.ipynb
+++ b/lectures/lecture16/Lecture16_DifferentialGeneExpression.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,10 +39,60 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Read transcript annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘DESeq2’ is not available for this version of R\n",
+      "\n",
+      "A version of this package for your version of R might be available elsewhere,\n",
+      "see the ideas at\n",
+      "https://cran.r-project.org/doc/manuals/r-patched/R-admin.html#Installing-packages”\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"DESeq2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(DESeq2): there is no package called ‘DESeq2’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(DESeq2): there is no package called ‘DESeq2’\nTraceback:\n",
+      "1. library(DESeq2)"
+     ]
+    }
+   ],
+   "source": [
+    "library(DESeq2)"
    ]
   },
   {
@@ -146,6 +198,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,6 +221,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,6 +303,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,6 +348,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -331,6 +389,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33697,6 +33756,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
@@ -33748,6 +33808,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
@@ -33936,6 +33997,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34105,7 +34167,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.2"
+   "version": "4.1.3"
   }
  },
  "nbformat": 4,
